local-deployment/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          image: docker.io/library/frontend:4.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config
