local-deployment/ocr-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr
  template:
    metadata:
      labels:
        app: ocr
    spec:
      containers:
      - name: ocr-container
        image: docker.io/library/ocr:1.0
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 5001
