local-deployment/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: docker.io/postgres:14
      ports:
        - containerPort: 5432
  volumes:
    - name: postgres-storage
      persistentVolumeClaim:
        claimName: postgres-pvc
